# project_PAPY_MandelbrotSet

./: LICENSE  README.md  setup.cfg
TP4/: __main__.py  helper.py
doc/source/: README.md  conf.py
tests/: test.py
