[metadata]
name = TP4
authors = Atys Panier / Ulysse Desgroppes
author_email = atys.panier@eleves.ec-nantes.fr
version = 1.0
license_file = LICENSE
license = MIT
description = Projet sur l ensemble de Mandelbrot et de Julia
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
packages = find:
python_requires = >= 3.8
install_requires = 
    pytest
    numpy
    Pillow
     
[options.entry_points]
console_scripts =
    JuliaPlot=TP4.__main__:julia
    MandelbrotPlot=TP4.__main__:mandelbrot
     
[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS